task1/k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logging-vs
spec:
  hosts:
    - "*"
  gateways:
    - logging-gateway
  http:
    - match:
        - uri:
            prefix: /log
          method:
            exact: POST
      route:
        - destination:
            host: logging-app-service
            port:
              number: 80
      timeout: 1s
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
      retries:
        attempts: 2
        perTryTimeout: 1s
    - match:
        - uri:
            prefix: /wrong
      route:
        - destination:
            host: logging-app-service
            port:
              number: 80
      fault:
        abort:
          httpStatus: 404
          percentage:
            value: 100
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: logging-app-service
            port:
              number: 80
